<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/txtDetailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_transaction_detail"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOpenHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_open_history" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weighted_layout_size"
        android:layout_weight="@integer/layout_weight_full"
        android:paddingTop="@dimen/detail_top_padding"
        android:scrollbars="vertical"
        android:text="@string/text_select_transaction"
        android:textSize="@dimen/detail_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputCaptureAmount"
            android:layout_width="@dimen/weighted_layout_size"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight_full"
            android:hint="@string/hint_capture_cents"
            android:inputType="number" />

        <Button
            android:id="@+id/btnCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_capture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/weighted_layout_size"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight_full"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/btnRetry"
            android:layout_width="@dimen/weighted_layout_size"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/layout_weight_full"
            android:text="@string/action_retry" />
    </LinearLayout>

</LinearLayout>
